--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.2.0"
   },
   "dependencies": {
     "sqlite3": "^5.1.7"
